fix(dp): "copied!" within block
Overflowing version hidden when code block used in a grid

--- a/site/blocks/code-snippet.scss
+++ b/site/blocks/code-snippet.scss
@@ -1,16 +1,18 @@
 .wp-code-snippet {
-    position: relative;
     margin-bottom: 32px;
     font-size: 12px;
     line-height: calc(16 / 12);
+    display: flex;
+    align-items: stretch;
+
+    background-color: $gray-10;
+    padding: 16px 24px;
+    border: 1px solid $blue-20;
+    color: $blue-60;
 
     pre {
-        background-color: $gray-10;
-        padding: 16px 24px;
-        padding-right: calc(24px + 85px);
         margin: 0;
-        border: 1px solid $blue-20;
-        color: $blue-60;
+        flex: 1;
     }
 
     .wp-code-snippet__code--is-truncated {
@@ -22,11 +24,9 @@
     button.code-copy-button {
         background: none;
         border: none;
-        position: absolute;
-        right: 32px;
-        top: 24px;
-        // center the button when there is only a single line of text
-        top: min(24px, calc(50% - 12px));
+        flex: 0 0 112px;
+        max-height: 32px;
+        text-align: right;
         color: $blue-60;
         cursor: pointer;
 
@@ -38,27 +38,12 @@
             color: $blue-100;
         }
 
-        &::after {
-            content: "Copied!";
-            position: absolute;
-            left: 24px;
-            top: -8px;
-            font-size: 12px;
-            color: $blue-100;
-            transition: opacity 350ms;
-            transition-delay: 750ms;
-            opacity: 0;
-        }
-
-        &.code-copy-button--has-copied::after {
-            opacity: 1;
-            transition: none;
+        &.code-copy-button--has-copied {
+            pointer-events: none;
         }
     }
 }
 
 .wp-code-snippet--light {
-    pre {
-        background-color: $white;
-    }
+    background-color: $white;
 }
